--- a/index.html
+++ b/index.html
@@ -1,50 +1,32 @@
-<!DOCTYPE html> <!--A VERSÃO MAIS NOVA DO HTML-->
-<html lang="pt-br"> <!-- HTML + IDIOMA DO SITE-->
-
-<head> <!-- CONFIGURAÇÕES DO SITE-->
-    <meta charset="UTF-8"> <!--PADRÃO DE CARACTERES-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--COMPATIVEL COM CELULARES E COMPUTADORES-->
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:
-        ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,
-        900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet/title" href="style.css">
-    <title>MyStarbucks</title> <!--TITULO DO SITE-->
-
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>MyStarbucks</title>
 </head>
-
 <body>
-
     <div class="circulo"></div>
-
-
     <img src="img/logo.png" class="logo">
-
-
     <div class="conteudo">
-
-
-
         <div class="textos">
-            <h2> It's not just coffe, It's <span>Brazil!</span> </h2>
-            <p>It is undeniably the best coffee in the competition!
-            <p>
-                <button>Click here for more</button>
-
+            <h2> It's not just coffee, It's <span>MyStarbucks</span> </h2>
+            <p>It is undeniably the best coffee in the competition!</p>
+            <button>Click here for more</button>
         </div>
-
         <div class="imagem">
             <img src="img/img1.png" class="imagem-copo">
         </div>
     </div>
-
     <div class="menu">
-        <img src="img/thumb1.png" class="botao-menu" onclick="trocaImagem('img/img1.png');  trocaCor('#017143')">
-        <img src="img/thumb2.png" class="botao-menu"onclick="trocaImagem('img/img2.png'); trocaCor('#eb7495')">
-        <img src="img/thumb3.png" class="botao-menu"onclick="trocaImagem('img/img3.png'); trocaCor('#d752b1')">
+        <img src="img/thumb1.png" class="botao-menu" onclick="trocaImagem('img/img1.png'); trocaCor('#017143')">
+        <img src="img/thumb2.png" class="botao-menu" onclick="trocaImagem('img/img2.png'); trocaCor('#eb7495')">
+        <img src="img/thumb3.png" class="botao-menu" onclick="trocaImagem('img/img3.png'); trocaCor('#d752b1')">
     </div>
-
+    <script src="scripts.js"></script>
 </body>
-<script src="scripts.js"></script>
 </html>
